# agent-base

./: .env.template  .gitignore  README.md  claude.md  self-model.md
.claude/skills/: agent-collab.md
.claude/skills/agent-collab/: SKILL.md
.claude/skills/memory-consolidation/: SKILL.md
.claude/skills/software-development/: SKILL.md
docs/: FINDINGS_SUMMARY.md  README.md  SPEEDRUN_ANALYSIS.md  TECHNICAL_COMPARISON.md
docs/plans/: README.md
knowledge/: README.md
memory/: drives-and-goals.md  episodic-memory.md  semantic-memory.md  working-memory.md
memory/agent-memory/: episodic-memory.md  semantic-memory.md  working-memory.md
memory/archive/: ARCHIVE_GUIDE.md
memory/project-memory/: active.md  backlog.md  context.md
projects/: README.md  TEMPLATE.md
scripts/: agent-collab-check.sh  health-check.sh  plan-manager.sh  poll-telegram.sh  telegram-process.sh  wake-up.sh
telegram_bot/: messages.db.backup  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  send_message.py  start_bot.sh  status.sh
telegram_bot/src/: __init__.py  bot_server.py  database.py  voice_transcription.py  whitelist.py
telegram_bot/tests/: __init__.py  conftest.py  test_bot_server.py  test_database.py  test_send_message.py  test_voice_transcription.py
